<resources>
    <string name="app_name">My_Coffee_shop</string>

    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="logo_description">Coffee App Logo</string>
    <string name="create_account">Create account</string>
    <string name="sign_up_with_google">Sign up with google</string>
    <string name="or">OR</string>
    <string name="first_name_required">First Name *</string>
    <string name="email_required">Email *</string>
    <string name="password_required">Password *</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="enter_your_email">Enter your first email</string>
    <string name="create_password">Create a password</string>
    <string name="password_requirement">Must be at least 8 characters.</string>
    <string name="already_have_account_login">Already have an account? Login</string>
    <string name="google_icon_desc">Google Icon</string>

    <string name="login_to_account">Login to account</string>
    <string name="login_with_google">Login with google</string>
    <string name="google_icon">Google Icon</string>

    <string name="password_requirements">Must be at least 8 characters.</string>
    <string name="login">Login</string>
    <string name="register_link">Don\'t you have an account? Register</string>

    <string name="get_start">Get Start</string>
    <string name="coffee_logo">Coffee Shop Logo</string>

    <string name="choose_your_coffee">Choose Your Coffee</string>
    <string name="cappuccino">Cappuccino</string>
    <string name="caramel_latte">Caramel Latte</string>
    <string name="mocha">Mocha</string>
    <string name="espresso">Espresso</string>
    <string name="browse_menu_description">Browse our menu! From classic lattes to seasonal specials, there\'s something for everyone.</string>
    <string name="next">Next</string>

    <string name="customize_your_drink">Customize Your Drink</string>
    <string name="size">Size</string>
    <string name="flavor">Flavor</string>
    <string name="milk">Milk</string>
    <string name="temperature">Temperature</string>
    <string name="toppings">Toppings</string>
    <string name="strength">Strength</string>
    <string name="customize_description">Pick your perfect brew! Choose your size, flavor, milk, and more. Your coffee, your way.</string>

    <string name="loyalty_rewards">Loyalty Rewards</string>

    <string name="loyalty_description">Collect points with every sip! Every purchase gets you closer to a free drink.
        🎉 (Because who doesn\'t love a free coffee?)</string>

    <string name="star_rating">Star rating</string>
    <string name="loyalty_image_desc">Loyalty rewards illustration</string>

    <string name="navigation_dots">Navigation indicator</string>
    <string name="title_activity_main12">MainActivity12</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="nav_search">Search</string>
    <string name="nav_home">Home</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_profile">Profile</string>
    <string name="coffee_shop">Coffee Shop</string>
    <string name="tea">Tea</string>
    <string name="coffee">Coffee</string>
    <string name="cake">Cake</string>
    <string name="juice">Juice</string>
    <string name="latte">Latte</string>
    <string name="popular">Popular</string>
    <string name="see_more">See More...</string>
    <string name="black_coffee">Black Coffee</string>

    <string name="macchiato">Macchiato</string>
    <string name="price_523">523.00 Rs</string>
    <string name="price_478">478.00 Rs</string>
    <string name="price_560">560.00 Rs</string>
    <string name="price_540">540.00 Rs</string>
    <string name="price_510">510.00 Rs</string>
    <string name="rating_4_3">4.3</string>
    <string name="rating_4_0">4.0</string>
    <string name="star_description">Rating Star</string>
    <string name="heart_icon_description">Add to Favorites</string>
    <string name="cappuccino_image_description">Cappuccino Image</string>
    <string name="latte_image_description">Latte Image</string>
    <string name="espresso_image_description">Espresso Image</string>
    <string name="black_coffee_image_description">Black Coffee Image</string>
    <string name="mocha_image_description">Mocha Image</string>
    <string name="macchiato_image_description">Macchiato Image</string>
    <string name="search_icon_description">Search</string>
    <string name="notifications_icon_description">Notifications</string>
    <string name="home_icon_description">Home</string>
    <string name="profile_photo_description">User Profile Photo</string>
    <string name="user_icon_description">User Profile</string>


    <!-- Profile Information -->
    <string name="profile_title">Hi I\'m Arthi\nJoined in 2025</string>
    <string name="edit">Edit</string>
    <string name="personal_info">Personal info</string>

    <!-- User Data -->
    <string name="first_name">First Name : Arthi</string>
    <string name="last_name">Last Name : Manogaran</string>
    <string name="gender">Gender : Female</string>
    <string name="email">Email: arthi2001@gmail.com</string>
    <string name="contact_number">Contact No: 077 111 1111</string>
    <string name="address">Address: Neliyadi , Jaffna</string>
    <string name="last_order_id">Last Order ID: 4352 2748 3920</string>

    <!-- Navigation Content Descriptions -->
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="user_profile">User Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">LOG OUT</string>
    <string name="back">Back_btn</string>



    <string name="favourite">Favourite</string>
    <string name="favorite_icon">Favorite Icon</string>

    <string name="latte_coffee">Latte coffee</string>
    <string name="price_523_rs">523.00Rs</string>

    <!-- Quantity Controls -->
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="quantity_1">1</string>

  
    <string name="remove">Remove</string>

    <string name="coffee_name">Mocha</string>
    <string name="coffee_description">It\'s a delicious coffee drink that combines espresso, steamed milk, and chocolate syrup or cocoa powder.</string>
    <string name="rating_value">4.3</string>
    <string name="size_label">size</string>
    <string name="size_small">small</string>
    <string name="size_medium">Medium</string>
    <string name="size_large">Large</string>
    <string name="sugar_label">Sugar</string>
    <string name="sugar_30">30%</string>
    <string name="sugar_40">40%</string>
    <string name="sugar_50">50%</string>
    <string name="quantity_one">1</string>
    <string name="price_value">540.00Rs</string>
    <string name="add_to_cart">Add Cart</string>
    <string name="minus_symbol">−</string>
    <string name="plus_symbol">+</string>

    <string name="coffee_image_desc">Mocha coffee drink image</string>
    <string name="rating_star">Rating star</string>
    <string name="small_size">Small size coffee cup</string>
    <string name="medium_size">Medium size coffee cup</string>
    <string name="large_size">Large size coffee cup</string>
    <string name="search_desc">Search</string>
    <string name="notifications_desc">Notifications</string>
    <string name="home_desc">Home</string>
    <string name="favorite_desc">Favorites</string>
    <string name="user_desc">User profile</string>

</resources>